fixed spacing for skills menu to be centered on page

--- a/src/styles/skillsMenu.css
+++ b/src/styles/skillsMenu.css
@@ -3,7 +3,8 @@
     position: fixed;
     display: flex;
     flex-direction: column;
-    left: 30%;
+    left: 50%;
+    transform: translateX(-50%);
     top: 30%;
     align-items: flex-end;
 }
